--- a/style.css
+++ b/style.css
@@ -17,3 +17,22 @@ body {
     width: 100%;
     height: 50%;
 }
+
+.timepops {
+    display: inherit;
+    width: 100%;
+    height: 50%;
+    align-items: center;
+    justify-content: space-around;
+    background-color: peachpuff;
+
+}
+
+.custom {
+    display: inherit;
+    width: 100%;
+    height: 50%;
+    align-items: center;
+    justify-content: space-around;
+    background-color: peachpuff;
+}
