--- a/style.css
+++ b/style.css
@@ -4,8 +4,12 @@ body {
 
 .bigdiv {
     display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
     width: 300px;
     height: 500px;
+    background-color: #EDF5F6;
 }
 
 .flexbox {
@@ -13,9 +17,16 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: peachpuff;
-    width: 100%;
-    height: 50%;
+    background-color: #DEF2F5;
+    border-radius: 10px;
+    width: 90%;
+    height: 25%;
+}
+
+.time{
+    font-weight: bold;
+    font-size: 30px;
+    color: #3E3E3E;
 }
 
 .timepops {
@@ -24,15 +35,53 @@ body {
     height: 50%;
     align-items: center;
     justify-content: space-around;
-    background-color: peachpuff;
+}
 
+.timeperiod{
+    align-items: flex-start;
 }
 
 .custom {
+    color: #4CC0D0;
     display: inherit;
     width: 100%;
     height: 50%;
     align-items: center;
     justify-content: space-around;
-    background-color: peachpuff;
+}
+
+.arbetsplats {
+    display: flex;
+    background-color: #EDF5F6;
+    flex-direction: column;
+    height: 300px;
+    width: 90%;
+}
+
+.arbete {
+    font-family: 'Roboto', sans-serif;
+    font-weight: normal;
+    font-size: 20px;
+    color: #3E3E3E;
+    display: inherit;
+    justify-content: space-between;
+
+    align-items: flex-start;
+}
+
+.song {
+    padding-top: 5vh;
+
+
+}
+
+.button-wrap {
+    margin-right: 28px;
+}
+
+button {
+    border: 2px solid #4CC0D0;
+    background:  #EDF5F6;
+    border-radius: 10px;
+    padding: 10px 10px 10px;
 }
